feat:(Complete the endpoint for made the draft route to take)